---
source: crates/parse/src/tests.rs
description: "f(a, g(b), c.x)\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0012_call_exp.tip
---
Call(Id(Id("f")), [
  Id(Id("a")),
  Call(Id(Id("g")), [
    Id(Id("b")),
  ]),
  FieldAccess(Id(Id("c")), Id("x")),
])
